ogcapi-records links + some architecture additions (#130)
* add openapi (swagger) support for the formatter MIME-types

* formatting changes + -Dqa

* wip: links

* wip: simplifying dynamic properties + empty-index (missing properties) test

* integration tests for dynamic properties

* 1. add json link to most html pages 2. proper handling of default profiles and application-ogcapi.yaml 3. other minor bug fixes

* support for proxy

* formatting

---------

Co-authored-by: David Blasby <david.blasby@geocat.net>